New features added!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sammy</string>
+    <string name="scene_describer_volume">Scene describer</string>
 </resources>
